--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.1.7",
+    "hamburger-react": "^2.5.0",
     "lucide-react": "^0.372.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-use": "^17.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
