--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.372.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18",
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.3.0",
