--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^11.1.7",
     "hamburger-react": "^2.5.0",
     "lucide-react": "^0.372.0",
-    "next": "14.0.4",
+    "next": "^14.2.29",
     "react": "^18",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18",
