--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react": "^18",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18",
+    "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
