--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.856.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tiptap/extension-code-block": "^3.0.7",
+    "@tiptap/extension-document": "^3.0.7",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-paragraph": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "@vercel/analytics": "^1.3.2",
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
@@ -24,6 +32,7 @@
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.0",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1",
