--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.856.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tiptap/extension-code-block": "^3.0.7",
     "@tiptap/extension-document": "^3.0.7",
     "@tiptap/extension-image": "^3.0.7",
