--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.372.0",
     "next": "^14.2.29",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.0",
     "sharp": "^0.34.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1",
