--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tiptap/extension-code-block": "^3.0.7",
