feat: enhance editor code

--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@aws-sdk/client-s3": "^3.856.0",
     "@prisma/client": "^6.13.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tiptap/extension-code-block": "^3.0.7",
+    "@tiptap/extension-code-block": "^3.0.9",
     "@tiptap/extension-document": "^3.0.7",
     "@tiptap/extension-image": "^3.0.7",
     "@tiptap/extension-paragraph": "^3.0.7",
+    "@tiptap/extension-underline": "^3.0.9",
     "@tiptap/pm": "^3.0.7",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
